Fix right align text in right sidebar

--- a/website/static/css/dropdown-menus.css
+++ b/website/static/css/dropdown-menus.css
@@ -40,6 +40,10 @@ a.sub-level-nav {
     width: max-content;
 }
 
+.right-align {
+    text-align: right;
+}
+
 @media screen and (max-width: 42rem) {
     #main {
         flex-direction: column;
